@@ -480,6 +480,13 @@
 #
 ##########################################################################################################
 #
+## IPMI_System_Firmware_Progress_State
+#
+# IPMI_System_Firmware_Progress_State_Deasserted     Nominal
+# IPMI_System_Firmware_Progress_State_Asserted       Warning
+#
+##########################################################################################################
+#
 ## IPMI_System_Firmware_Progress_Device_Present
 #
 # IPMI_System_Firmware_Progress_Device_Present_Device_Removed_Device_Absent   Critical Critical
